# client-server

./: .gitignore  CMakeLists.txt  README.md
config/: config.hpp.in
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  HttpHeader.h  HttpRequest.h  HttpRequestSerializer.h  HttpResponse.h  SllUtils.h
src/HttpClient/: CMakeLists.txt  ConnectionParameters.h  HttpClient.h  HttpClientParameters.h  HttpHeaderParser.h  HttpResponsePopulator.h  HttpResponseStreamParser.h  RequestGenerator.h  delete.cpp
src/HttpClientStressTest/: CMakeLists.txt  HttpClientStressTest.cpp  LinkGenerator.h  StressTester.h
src/HttpClientUnitTest/: CMakeLists.txt  HttpClientUnitTest.cpp  HttpClientUnitTest.vcxproj  HttpClientUnitTest.vcxproj.filters
src/SampleHttpClient/: CMakeLists.txt  SampleHttpClient.cpp  SampleHttpClient.vcxproj  SampleHttpClient.vcxproj.filters  Tester.h
src/SampleHttpServer/: SampleHttpServer.cpp  SampleHttpServer.vcxproj  SampleHttpServer.vcxproj.filters
